# SnakeCharmR

./: .Rbuildignore  .Rhistory  .gitignore  .travis.yml  DESCRIPTION  INSTALL  NAMESPACE  NEWS  NEWS.Rmd  NEWS.md  README.Rmd  README.md  SnakeCharmR.Rproj  appveyor.yml  cleanup  configure  configure.ac  configure.win
R/: RcppExports.R  SnakeCharmR.r  misc.R  py.assign.R  py.call.R  py.exec.R  py.get.R  py.load.R  py.rm.R
man/: SnakeCharmR.Rd  py.assign.Rd  py.call.Rd  py.exec.Rd  py.get.Rd  py.load.Rd  py.rm.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  python.cpp
tests/: testthat.R
tests/testthat/: test-call.R  test-exec.R  test-get-assign.R  test-rcpp-get.R
